css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: 'Rubik Mono One', sans-serif;
    font-size: 16px;
    line-height: 1.2;
    color: black;
    scroll-behavior: smooth;
}

.container {
    display: flex;
    width: 100%;
	height: 100vh;
    position: relative;
}

/* LINKS-TOP */
.big_container {
    width: 100%;
    position: relative;
}

.fixed {
    position: fixed;
    top: 1.5em;
    right: -1em;
    z-index: 2;
}

.fixed a span {
    display: inline-block;
    background-color: white;
    text-align: center;
    width: 3em;
    height: 3em;
    border-radius: 50%;
    line-height: 3em;
    font-size: .7em;
    margin-right: 2.5em;
}

.fixed a {
    text-decoration: none;
    color: black;
    display: inline-block;
}

a span:hover {
    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .4);
}

a span:active {
    background-color: rgba(0, 0, 0, .2);
}

/* BACKGROUNDS */
.container.red {
    background-color: #FF0000;
}

.container.green {
    background-color: #008000;
}

.container.yellow {
    background-color: #FFFF00;
}

/* SHOES */
.content {
    width: 65%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.content img {
    width: 100%;
}

/* IL NOSTRO MODELLO DI PUNTA */
.didascalia {
    font-size: 2em;
    text-align: center;
}

.didascalia.yellow {
    color: #FFFC00;
}

.didascalia.green {
    color: #068300;
}

